--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   </head>
 
@@ -96,7 +97,7 @@
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Profile usage</h4>
-            <p class="text-muted">This data can then be accessed by market researchers who conduct further research on your personal data.</p>
+            <p class="text-muted">This data can then be accessed by market researchers who conduct further research on your personal data. Your data is then used in services such as Google Analytics, to further analyze your online behaviour.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -104,7 +105,7 @@
               <i class="fas fa fa-search-plus fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Targeted Ads</h4>
-            <p class="text-muted">This data is then access by ad networks who create targeted ads for you on social media platforms along with ads on different pages you visit.
+            <p class="text-muted">This data is then accessed by ad networks who create targeted ads for you on social media platforms along with ads on different pages you visit. This is the reason a search on one website generates other related ads based on that search on other pages you visit.
 </p>
             
           </div> 
@@ -466,34 +467,15 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Created by Eamonn Keane, </span>
           </div>
+
+        
+
           <div class="col-md-4">
-            <ul class="list-inline social-buttons">
+            <ul class="list-inline quicklinks" style="color: black;">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <ul class="list-inline quicklinks">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
+             <span class="copyright">  Made with ❤️ at UBC | <a href="references.html" style="color: black;">References</a> </span>
               </li>
             </ul>
           </div>
