section and references added

--- a/references.html
+++ b/references.html
@@ -25,18 +25,40 @@
 <body>
     <h1 style="text-align: center;"> References </h1>
     <ul>
-        <li> Burgess, Matt. “How to Stop Google from Tracking You and Delete Your Personal Data.” WIRED, WIRED UK, 17 Aug. 2018, www.wired.co.uk/article/google-history-search-tracking-data-how-to-delete. </li>
+        <li> Burgess, Matt. “How to Stop Google from Tracking You and Delete Your Personal Data.” WIRED, WIRED UK, 17 Aug. 2018, www.wired.co.uk/article/google-history-search-tracking-data-how-to-delete. </li> <br/>
 
 
-<li>Marr, Bernard. “How Much Data Do We Create Every Day? The Mind-Blowing Stats Everyone Should Read.” Forbes, Forbes Magazine, 9 July 2018, www.forbes.com/sites/bernardmarr/2018/05/21/how-much-data-do-we-create-every-day-the-mind-blowing-stats-everyone-should-read/#1983249160ba. </li>
+<li>Marr, Bernard. “How Much Data Do We Create Every Day? The Mind-Blowing Stats Everyone Should Read.” Forbes, Forbes Magazine, 9 July 2018, www.forbes.com/sites/bernardmarr/2018/05/21/how-much-data-do-we-create-every-day-the-mind-blowing-stats-everyone-should-read/#1983249160ba. </li><br/>
+
+<li>Alharthi, Abdulkhaliq, et al. “Addressing Barriers to Big Data.” Business Horizons, vol. 60, no. 3, 20 Feb. 2017, pp. 285–292., doi:10.1016/j.bushor.2017.01.002.</li><br/>
+
+<li>Fleckenstein, Mike, et al. Modern Data Strategy. Springer International Publishing, 2018.</li><br/>
+
+<li>Lee, In. “Big Data: Dimensions, Evolution, Impacts, and Challenges.” Business Horizons, vol. 60, no. 3, 13 Feb. 2017, pp. 293–303., doi:10.1016/j.bushor.2017.01.004.</li><br/>
+
+<li> Public Works and Government Services Canada, Public Services and Procurement Canada, Integrated Services Branch. “Vol. 151, No. 35 - September 2, 2017.” Welcome - Canada Gazette, Government of Canada, Public Works and Government Services Canada, Integrated Services Branch, Canada Gazette, www.gazette.gc.ca/rp-pr/p1/2017/2017-09-02/html/reg1-eng.html. </li><br/>
+<li>“Your Privacy Is Important to Us.” TELUS, www.telus.com/en/on/support/privacy-policy. </li><br/>
 
 
-<li> <strong> Main Image Source: </strong> “PNG Clipart Free Download, Largest Transparent Clip Art Images Collection - ClipartMax.” ClipartMax.com, 2018, www.clipartmax.com/png/middle/229-2290450_privacy-data-privacy-security-icon.png. </li>
+<li> Bremmer, Ian. “GDPR Day: How Countries Are Handling Digital Privacy Rights.” Time, Time, 25 May 2018, time.com/5291529/gdpr-digital-privacy/. </li><br/>
+<li>Gittens, Sebastien A., et al. “Understanding the GDPR: A Comparison Between the GDPR, PIPEDA and PIPA | Bennett Jones.” Ranjan K. Agarwal, Bennett Jones, 14 May 2018, www.bennettjones.com/en/Blogs-Section/Understanding-the-GDPR. </li><br/>
+
+
+<li> Krashinsky Robinson, Susan. “Parliamentary Report Recommends Modernizing Canada's Privacy Law.” The Globe and Mail, The Globe and Mail, 5 Mar. 2018, www.theglobeandmail.com/technology/parliamentary-report-recommends-modernizing-canadas-privacy-law/article38203771/. 
+</li><br/>
+<li> Morgan, Charles S., et al. “Parliamentary Committee Recommends Substantial Revisions to PIPEDA – Part 5 – Adequacy.” McCarthy Tétrault, 3 Apr. 2018, www.mccarthy.ca/en/insights/blogs/cyberlex/parliamentary-committee-recommends-substantial-revisions-pipeda-part-5-adequacy. </li><br/>
+<li>Flags of Canada and the European Union have been released to the public domain. Originally uploaded to Wikimedia/Wikipedia.</li><br/>
 
 
 
-<li><strong>Favicon Icon:</strong> “Welcome to WallpaperCave!” WallpaperCave, 2018, wallpapercave.com/wp/forev4s.jpg. </li>
- </li>
+<li> <strong> Main Image Source: </strong> “PNG Clipart Free Download, Largest Transparent Clip Art Images Collection - ClipartMax.” ClipartMax.com, 2018, www.clipartmax.com/png/middle/229-2290450_privacy-data-privacy-security-icon.png. </li><br/>
+
+
+
+<li><strong>Favicon Icon:</strong> “Welcome to WallpaperCave!” WallpaperCave, 2018, wallpapercave.com/wp/forev4s.jpg. </li><br/>
+
+
+
 
 
     </ul>
