--- a/references.html
+++ b/references.html
@@ -22,8 +22,8 @@
 
   </head>
 
-<body>
-    <h1 style="text-align: center;"> References </h1>
+<body><br/> <br/>
+    <h1 style="text-align: center;"> References </h1><br/> <br/>
     <ul>
         <li> Burgess, Matt. “How to Stop Google from Tracking You and Delete Your Personal Data.” WIRED, WIRED UK, 17 Aug. 2018, www.wired.co.uk/article/google-history-search-tracking-data-how-to-delete. </li> <br/>
 
