5/5 sections added and icons

--- a/references.html
+++ b/references.html
@@ -50,12 +50,20 @@
 <li>Flags of Canada and the European Union have been released to the public domain. Originally uploaded to Wikimedia/Wikipedia.</li><br/>
 
 
+<li> <strong> Flag Icons: </strong> “Flaticon, the Largest Database of Free Vector Icons.” Flaticon, 2018, www.flaticon.com/. </li> <br/>
+<li> <strong> Timeline Icon: </strong>“11,492,942 Royalty Free Vector Images.” VectorStock, 2018, cdn1.vectorstock.com/. </li><br/>
+<li> <strong> Timeline Icon: </strong> Iconfinder. “2,875,000+ Free and Premium Vector Icons. SVG, PNG, AI, CSH and PNG Format.” Iconfinder, 2018, cdn4.iconfinder.com/. </li> </br>
+
+
+
 
 <li> <strong> Main Image Source: </strong> “PNG Clipart Free Download, Largest Transparent Clip Art Images Collection - ClipartMax.” ClipartMax.com, 2018, www.clipartmax.com/png/middle/229-2290450_privacy-data-privacy-security-icon.png. </li><br/>
 
 
 
 <li><strong>Favicon Icon:</strong> “Welcome to WallpaperCave!” WallpaperCave, 2018, wallpapercave.com/wp/forev4s.jpg. </li><br/>
+
+<li><strong>Template from:</strong> "Bootstrap Themes Built &amp; Curated by the Bootstrap Team.” Bootstrap Themes, 2018, themes.getbootstrap.com/. </li><br/>
 
 
 
