--- a/references.html
+++ b/references.html
@@ -49,6 +49,23 @@
 <li> Morgan, Charles S., et al. “Parliamentary Committee Recommends Substantial Revisions to PIPEDA – Part 5 – Adequacy.” McCarthy Tétrault, 3 Apr. 2018, www.mccarthy.ca/en/insights/blogs/cyberlex/parliamentary-committee-recommends-substantial-revisions-pipeda-part-5-adequacy. </li><br/>
 <li>Flags of Canada and the European Union have been released to the public domain. Originally uploaded to Wikimedia/Wikipedia.</li><br/>
 
+<li>Gartner, B. (2018, January 08). Fast Fast Forward. Retrieved from https://axaxl.com/fast-fast-forward/articles/are-hotels-and-hospitality-more-vulnerable-to-cyber-breach</li><br/>
+
+<li>Johnson, E. (2017, October 27). TD insider says bank doesn't want you to know it's outsourcing work overseas. Retrieved from https://www.cbc.ca/news/business/td-bank-outsourcing-fraud-india-1.4362324</li><br/>
+
+<li>Khosrowshahi, D. (2017, November 21). 2016 Data Security Incident. Retrieved from https://www.uber.com/newsroom/2016-data-incident/</li><br/>
+
+<li>Proposed class-action lawsuits filed against BMO, CIBC's Simplii after possible data breaches | CBC News. (2018, June 18). Retrieved from https://www.cbc.ca/news/canada/toronto/proposed-class-action-lawsuits-filed-against-bmo-cibc-s-simplii-after-possible-data-breaches-1.4711332</li><br/> 
+
+<li>Soloman, H. (n.d.). Canada third in reported data breaches so far this year. Retrieved July 26, 2017, from https://www.itworldcanada.com/article/canada-third-in-reported-data-breaches-so-far-this-year/395132</li><br/>
+
+<li>Timeline: The growing number of hotel data breaches. (2018, January 10). Retrieved from http://www.hotelnewsnow.com/Articles/50937/Timeline-The-growing-number-of-hotel-data-breaches</li><br/>
+
+<li>Uber announces new data breach affecting 57 million riders and drivers. (n.d.). Retrieved from https://us.norton.com/internetsecurity-emerging-threats-uber-breach-57-million.html</li><br/>
+
+<li>B. (2018, April 12). Uber Data Breach Exposed Personal Information of 20 Million Users. Retrieved from http://fortune.com/2018/04/12/uber-data-breach-security/</li><br/>
+
+
 
 <li> <strong> Flag Icons: </strong> “Flaticon, the Largest Database of Free Vector Icons.” Flaticon, 2018, www.flaticon.com/. </li> <br/>
 <li> <strong> Timeline Icon: </strong>“11,492,942 Royalty Free Vector Images.” VectorStock, 2018, cdn1.vectorstock.com/. </li><br/>
